Fix SPA routing for GitHub Pages - handle direct URL access and page reloads properly

--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Inter:400,500,600,700&display=swap" rel="stylesheet" />
     <script>
       // Single Page Application redirect for GitHub Pages
+      // This handles the redirect from 404.html back to the correct route
       (function(l) {
         if (l.search[1] === '/' ) {
           var decoded = l.search.slice(1).split('&').map(function(s) { 
