Fix Google Analytics: Replace environment variable with actual tracking ID G-WP9GE83NKE

--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -12,7 +12,7 @@
       // Only load analytics in production
       if (window.location.hostname !== 'localhost' && window.location.hostname !== '127.0.0.1') {
         // Get tracking ID from build-time environment variable
-        var GA_TRACKING_ID = '%VITE_GA_TRACKING_ID%';
+        var GA_TRACKING_ID = 'G-WP9GE83NKE';
         
         if (GA_TRACKING_ID && GA_TRACKING_ID !== '%VITE_GA_TRACKING_ID%') {
           // Load Google Analytics
